# dpl

./: .gitattributes  .gitignore  Basics.md  CONTRIBUTING.md  DPL.sublime-syntax  LICENSE  README.html  README.md  README.txt  SECURITY.md  STANDARDS.md  TODO.md  debug_log.txt  dpl  dpl-run  dpl-run.sh  dpl.py  dpl.sh  dpl.spec  dpl_module.py  dplpm  file-cache.json  git-commit.sh  git-push.sh  info.py  install.sh  log.txt  meta_config.cfg  pyproject.toml  repl_startup_error.txt  requirements.txt  test.cdpl  test.dpl  test.py  test.sh  test.txt  testing.py  this.txt
dbs/: README.md  dbs.py  test.txt
dfpm/: dfpm.py
docs/: README.md  std_lib.md  updates.md
documenter/: docs.py
dpl2/: README.md  dpl.py  get_true_deps.py  info.py
example/: .cliche.dpl  .gitignore  .vimrc  .xx-advanced-calc.dpl.swp  01-helloworld.dpl  02-fact.dpl  03-fib.dpl  04-loops.dpl  05-fmt.dpl  05-fmt.pl  06-ascii.dpl  08-switches.dpl  09-ifmain.dpl  09-references.dpl  12-counter.dpl  12-preruntime.dpl  13-enums.dpl  14-structs.dpl  15-functions.dpl  16-c-opt.dpl  17-glob_match.dpl  18-nested_d_n_l.dpl  19-error_handling.dpl  21-inline.dpl  22-threads.dpl  23-static_fn.dpl  29-lazy.dpl  30-docs.dpl  32-debug_repl.1760622373.dplc  32-debug_repl.1760623291.dplc  32-debug_repl.1760668783.dplc  32-debug_repl.1760668903.dplc  32-debug_repl.1760670039.dplc  32-debug_repl.1760670051.dplc  32-debug_repl.1760670117.dplc  32-debug_repl.dpl.1760621038.dplc  32-debug_repl.dpl.1760621165.dplc  32-debug_repl.dpl.1760622142.dplc  32-debug_repl.dpl.1760622169.dplc  32-debug_repl.dpl.1760622373.dplc  (+69 more)
(+261 files in other folders)
