[project]
name = "duprol"  # Must be unique across PyPI
version = "1.4.8"
description = "My dumb programming language"
authors = [{ name = "Darren Chase Papa", email = "darrenchasepapa@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
